target/classes/META-INF/fabric8/openshift/ws-terpel-eds-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: f56bf9b3636352882b5f39aa2ba7e568182413c8
    fabric8.io/git-branch: master
    fabric8.io/git-url: https://github.com/arkazero/poc-fuse.git
  labels:
    app: ws-terpel-eds
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: com.terpel.poc
  name: ws-terpel-eds
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: ws-terpel-eds
    provider: fabric8
    group: com.terpel.poc
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: f56bf9b3636352882b5f39aa2ba7e568182413c8
        fabric8.io/git-branch: master
        fabric8.io/git-url: https://github.com/arkazero/poc-fuse.git
      labels:
        app: ws-terpel-eds
        provider: fabric8
        version: 1.0-SNAPSHOT
        group: com.terpel.poc
    spec:
      containers:
      - env:
        - name: CONFIG_LOCATION
        - name: SPRING_CONFIG_LOCATION
        - name: TZ
        - name: HOST_NOTIFICATION
        - name: PORT_NOTIFICATION
          value: '#{PORT_NOTIFICATION}#'
        - name: QUEUE_NOTIFICATION
        - name: FROM_MAILCONFIG
        - name: TO_MAILCONFIG
        - name: CC_MAILCONFIG
        - name: BCC_MAILCONFIG
        - name: SUBJECT_MAILCONFIG
        - name: TEMPLATE_MAILCONFIG
        - name: SERVICENAME_MAILCONFIG
        - name: SERVICETYPE_MAILCONFIG
        - name: ERRCONNECTMESSAGE_MAILCONFIG
        - name: ERRSQLSENTENCE_MAILCONFIG
        - name: ERRSTRUCTURE_MAILCONFIG
        - name: ERRNOTIFICATION_MAILCONFIG
        - name: SERVICENAME_CONSUMER_REST
        - name: APIPATH_CONSUMER_REST
        - name: APIBASEPATH_CONSUMER_REST
        - name: APIBASEPATH_CONSUMER_REST
        - name: HOST_PRODUCER_REST
        - name: CONTEXT_PRODUCER_REST
        - name: SERVICE_PRODUCER_REST
        - name: METHOD_PRODUCER_REST
        - name: TYPE_PRODUCER_REST
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: poc/ws-terpel-eds:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 60
          tcpSocket:
            port: 8080
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          initialDelaySeconds: 60
          tcpSocket:
            port: 8080
        resources:
          limits:
            cpu: "1.0"
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 256Mi
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /data
          name: volume-ws-terpel-eds
      volumes:
      - configMap:
          defaultMode: 420
          name: ws-terpel-eds-config
        name: volume-ws-terpel-eds
  triggers:
  - type: ConfigChange
