target/classes/META-INF/fabric8/openshift/ws-terpel-eds-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: 906f03aa01a0904a2771fce8c7ca1c897b8aed57
    fabric8.io/git-branch: master
    fabric8.io/git-url: https://github.com/arkazero/poc-fuse.git
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: ws-terpel-eds
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: com.terpel.poc
  name: ws-terpel-eds
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ws-terpel-eds
    provider: fabric8
    group: com.terpel.poc
  type: LoadBalancer
