target/classes/META-INF/fabric8/openshift/ws-terpel-eds-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: ws-terpel-eds
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: com.terpel.poc
  name: ws-terpel-eds
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: ws-terpel-eds
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - status: True
      type: Admitted
    routerName: router
    wildcardPolicy: None
